--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,19 +21,19 @@ jobs:
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
 
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{secrets.DOCKERHUB_USERNAME}}
-#          password: ${{secrets.DOCKERHUB_TOKEN}}
-#
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v2
-#
-#      - name: Build and push Docker image
-#        uses: docker/build-push-action@v4
-#        with:
-#          context: .
-#          file: ./Dockerfile
-#          push: true
-#          tags: ${{secrets.DOCKERHUB_USERNAME}}/<your-api-name>:latest
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/<javalin-api-pipeline>:latest
